--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/toolbar"
-        android:background="@color/green" />
+         />
 
 
     <android.support.v4.view.ViewPager
@@ -18,7 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+    </android.support.v4.view.ViewPager>
 
 
 </LinearLayout>
