--- a/app/src/main/res/layout/frag_personal_recommand.xml
+++ b/app/src/main/res/layout/frag_personal_recommand.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+
+    <com.bigkoo.convenientbanner.ConvenientBanner
+        android:id="@+id/convenientBanner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        android:layout_height="130dp"
+        app:canLoop="true"
+        ></com.bigkoo.convenientbanner.ConvenientBanner>
 
-
-    </ScrollView>
 
 </LinearLayout>
