--- a/app/src/main/res/layout/layout_nav_bottom.xml
+++ b/app/src/main/res/layout/layout_nav_bottom.xml
@@ -11,7 +11,7 @@
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/placeholder_disk_210"
         />
 
     <LinearLayout
