--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,12 @@
     <color name="yellow">#f8d700</color>
     <color name="white">#ffffff</color>
     <color name="black">#121010</color>
+    <color name="red">#FFD62B2B</color>
+    <color name="background">#4d4848</color>
+    <color name="whaite_text">#fafafa</color>
+    <color name="grey">#7b6a6a</color>
+    <color name="light_grey">#FFC7B7B7</color>
+    <color name="middle_grey">#7a6b6b</color>
 
 
 
