--- a/app/src/main/res/layout/layout_nav_bottom.xml
+++ b/app/src/main/res/layout/layout_nav_bottom.xml
@@ -27,13 +27,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/song_artist"
             android:layout_width="match_parent"
             android:textSize="13sp"
             android:text="薛之谦"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <ImageView
-        android:id="@+id/play_list"
+        android:id="@+id/list_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
