--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,9 @@
     <color name="whaite_text">#fafafa</color>
     <color name="grey">#7b6a6a</color>
     <color name="light_grey">#FFC7B7B7</color>
-    <color name="middle_grey">#7a6b6b</color>
+    <color name="middle_grey">#4c4a4a</color>
+    <color name="song_bg">#dbdbdb</color>
+
 
 
 
