--- a/app/src/main/res/layout/local_song_item.xml
+++ b/app/src/main/res/layout/local_song_item.xml
@@ -27,12 +27,21 @@
             android:layout_height="wrap_content" />
 
     </RelativeLayout>
-    <ImageView
-        android:layout_marginRight="20dp"
-        android:id="@+id/song_choice"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@mipmap/music_icn_more"
-        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/song_choice"
+            android:layout_width="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_height="match_parent"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:background="@drawable/songchoice_bg"
+            android:src="@mipmap/music_icn_more"
+            android:layout_alignParentRight="true" />
+    </RelativeLayout>
+
 
 </LinearLayout>
