--- a/app/src/main/res/layout/frag_all_playlist_item.xml
+++ b/app/src/main/res/layout/frag_all_playlist_item.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="140dp"
+    android:layout_width="150dp"
     android:layout_height="170dp"
     android:layout_marginTop="6dp">
     <FrameLayout
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="150dp"
         android:id="@+id/fra"
         >
         <com.facebook.drawee.view.SimpleDraweeView
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="150dp"
             android:id="@+id/playlist_art"
             android:scaleType="centerCrop"
             fresco:progressBarAutoRotateInterval="1000"
@@ -41,6 +43,9 @@
 
     </FrameLayout>
     <TextView
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/playlist_name"
