--- a/app/src/main/res/layout/recommend_newalbums_item.xml
+++ b/app/src/main/res/layout/recommend_newalbums_item.xml
@@ -5,6 +5,8 @@
     android:layout_marginTop="6dp"
     >
         <com.facebook.drawee.view.SimpleDraweeView
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
             xmlns:fresco="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="110dp"
@@ -26,6 +28,7 @@
         android:ellipsize="end"
         android:text="3000000"/>
     <TextView
+        android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/artist_name"
