--- a/app/src/main/res/layout/recommend_playlist_item.xml
+++ b/app/src/main/res/layout/recommend_playlist_item.xml
@@ -2,19 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="110dp"
+    android:layout_width="125dp"
     android:layout_height="150dp"
-
-    android:layout_marginTop="6dp">
+    >
     <FrameLayout
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="117dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
         android:id="@+id/fra"
         >
         <com.facebook.drawee.view.SimpleDraweeView
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="115dp"
             android:id="@+id/playlist_art"
             android:scaleType="centerCrop"
             fresco:progressBarAutoRotateInterval="1000"
@@ -42,6 +43,7 @@
 
     </FrameLayout>
     <TextView
+        android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/playlist_name"
