--- a/app/src/main/res/layout/activity_gedandetail.xml
+++ b/app/src/main/res/layout/activity_gedandetail.xml
@@ -18,12 +18,11 @@
             app:expandedTitleGravity="bottom"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/album_art"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/placeholder_disk_300"
                 app:layout_collapseMode="parallax" />
 
             <View
