--- a/app/src/main/res/layout/recommend_newalbums_item.xml
+++ b/app/src/main/res/layout/recommend_newalbums_item.xml
@@ -28,6 +28,8 @@
         android:ellipsize="end"
         android:text="3000000"/>
     <TextView
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
         android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
