--- a/app/src/main/res/layout/recommend_playlist_item.xml
+++ b/app/src/main/res/layout/recommend_playlist_item.xml
@@ -43,6 +43,8 @@
 
     </FrameLayout>
     <TextView
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
         android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
