--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="black">#121010</color>
     <color name="red">#FFD62B2B</color>
     <color name="background">#4d4848</color>
-    <color name="whaite_text">#fafafa</color>
+    <color name="white_text">#fafafa</color>
     <color name="grey">#7b6a6a</color>
     <color name="light_grey">#FFC7B7B7</color>
     <color name="middle_grey">#4c4a4a</color>
