--- a/app/src/main/res/layout/activity_playing.xml
+++ b/app/src/main/res/layout/activity_playing.xml
@@ -4,23 +4,54 @@
     android:layout_height="match_parent">
 
 
-    <ImageView
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        />
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/albumArt"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/login_bg_night" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00010101" />
+
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/green">
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/song_name"
+                android:ellipsize="marquee"
+                android:singleLine="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="17sp"
+                android:textColor="@color/white_text"
+                />
+
+            <TextView
+                android:id="@+id/song_artist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:maxLines="1"
+                android:textColor="@color/light_grey"
+                />
+
+
+        </LinearLayout>
+
 
     </android.support.v7.widget.Toolbar>
 
@@ -44,20 +75,17 @@
                 android:layout_height="match_parent">
 
 
-                <TextView
+                <com.example.ritchie_huang.manyuemusic.Lyric.LyricView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="好歌不容错过"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/yellow" />
+                    />
             </ScrollView>
 
 
         </FrameLayout>
 
         <LinearLayout
-            android:background="@color/green"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/headerView"
@@ -83,7 +111,7 @@
                     android:gravity="right"
                     android:singleLine="true"
                     android:text="00:00"
-                    android:textColor="@color/whaite_text"
+                    android:textColor="@color/white_text"
                     android:textSize="10sp"
 
                     />
@@ -103,7 +131,7 @@
                     android:layout_weight="1"
                     android:singleLine="true"
                     android:text="00:00"
-                    android:textColor="@color/whaite_text"
+                    android:textColor="@color/white_text"
                     android:textSize="10sp"
 
                     />
