--- a/app/src/main/res/layout/activity_music_play.xml
+++ b/app/src/main/res/layout/activity_music_play.xml
@@ -9,6 +9,7 @@
         android:id="@+id/btn_start_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="开始服务"
         tools:layout_editor_absoluteX="108dp"
         tools:layout_editor_absoluteY="425dp" />
@@ -17,6 +18,7 @@
         android:id="@+id/btn_stop_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="结束服务"
         tools:layout_editor_absoluteX="204dp"
         tools:layout_editor_absoluteY="323dp" />
@@ -25,6 +27,7 @@
         android:id="@+id/btn_bind_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="绑定服务"
         tools:layout_editor_absoluteX="204dp"
         tools:layout_editor_absoluteY="323dp" />
@@ -33,6 +36,7 @@
         android:id="@+id/btn_unbind_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="解绑服务"
         tools:layout_editor_absoluteX="204dp"
         tools:layout_editor_absoluteY="323dp" />
